    Use guzzle sink to prevent oom issue using backups in the browser (#242)
    Allow running php script "forever" when importing a backup (#245)
    Only search for image types applicable to instance being created
    Use simplestreams to read images from remote sources
    Improve import images UX
    Improve virtual machine creation UI & UX

0.9.3

Added
    Give access to operation error if its not empty

Changed
    Check location before emiting operation to prevent duplicate notifications
        in a cluster environment

0.9.2 - 30/06/2020

Fixed
    Issue with loading container tree after deleting container
    Issue with adding a new cluster breaks because the first member alias not
        properly set
    Dont break when we come across a cluster member we aren't managing

Changed
    Jump to instance server view after deleting instance instead of overview

0.9.1 - 28/06/2020

Fixed
    Cant search for images (#122)
    When downloading an image based on an alias, the servrer may return a
        new image with a different fingerprint to the one sent with the request
        so updated this to use the new fingerprint if there is one

Changed
    Imges will now actually filter results of the search and not return everything

0.9.0 - 27/06/2020

Added
    Version check showing if there is an update available (#191)
    CRUD operations for image aliases (#170)
    Update image "public" & "auto update" properties (#170)
    Display some of the system details provided in LXD >= 4.1 (#206)
    Export instance as image
    Create profiles (#175)
    Allow user to create custom dashboards of instance metrics
    Documenation for instance settings (#218)
    Backup scheduling (#189)

Fixed
    Cant load project inforatmion
    Cant upload file to instance files
    Cant load backups for instance (#211)
    Sidebar lost when LXD host goes offline (#152)

Changed
    Inject userId if requested by controller so the $userId variable in a